Please notice:
  not all changes commented here, please use GitHub commits history for more deatils.

2019_09_20:
  changes in ompp-ui: reorganize model pages
  small changes in c++ runtime and Go library to use same table names for all database vendors

2019_07_19:
  changes in ompp-ui: implemented pivot view UI and remove handsontable
  small changes in oms web-service to simplify input sets (scenarios) editing

2019_05_10:
  move all source code to GitHub
  remove from main repository Go, R, ompp-ui and docker sources

2019_03_07:
  following source code moved to github.com/openmpp:
    - all svn Go code
    - R, ompp-ui, docker
    - openmpp.org web-site

2018_02_05:
  openM++ user interface (ompp-ui) alpha version
  oms web-service API changes related to ompp-ui

2017_12_19:
  major changes: beta version of openM++ web-service to access (oms)
  minor changes and bug fixes, update for Visual Studio 2017
  pre-alpha version of openM++ user interface (ompp-ui)

2017_06_05:
  major release: parameters sub-values for probabilistic statistical analysis
  minor changes and bug fixes, update for Visual Studio 2017

2016_12_29:
  minor release: fix R test script and dbcopy utility bug in delete model

2016_12_24:
  localizataion: support for translated messages in models and omc

2016_11_22:
  minor release to fix performance issues for large parameters csv and compilation

2016_11_15:
  minor release to improve dbcopy utility and fix some bugs

2016_09_28:
  support for model "publish": 
    import-export into and from json and csv files for model, input parameters set, run results
    direct copy between databases (eg: model using SQLite local.db and central storage is MySQL)
  model can directly use csv file(s) for input parameters, no database required
  data access library, API in Go, import-export tools (alpha)

2016_03_22:
  minor release to improve modeling task support and R package

2016_02_16:
  compiler and openM++ model code is stable now